fix: SearchBar - drop-text와 sidebar z-index 수정

--- a/public/css/admin/aside.css
+++ b/public/css/admin/aside.css
@@ -11,6 +11,7 @@
   transition: all .3s ease;
   overflow: hidden;
   border-right: 1px solid var(--black);
+  z-index: 10;
   /* padding: 3px 7px 0 7px;  */
   /* 로고 패딩값 */
 }
